--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
+            background-image: url('https://ares.shiftdelete.net/2023/07/ea-sports-fc-24-cikis-tarihi-fiyati.jpg');  /* Replace with the URL of the EA FC game cover image */
+            background-size: cover;  /* Cover the entire viewport */
+            background-position: center;  /* Center the background image */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -16,7 +18,7 @@
         }
 
         #ratingForm {
-            background: #fff;
+            background: rgba(255, 255, 255, 0.8);  /* Add slight transparency for better readability */
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
             padding: 20px;
@@ -64,7 +66,14 @@
             padding: 15px;
             background: linear-gradient(to bottom, #fff, #f9f9f9);
             position: relative;
+            overflow: hidden;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .description {
+            font-size: 12px;
+            color: #777;
+            margin-bottom: 15px;
         }
     </style>
 </head>
@@ -75,23 +84,23 @@
             <label for="raterName">Your Name:</label>
             <select name="raterName" required>
                 <option value="">Select your name</option>
-                <option value="SAI">SAI</option>
-                <option value="AARON">AARON</option>
-                <option value="DIEGO">DIEGO</option>
-                <option value="BRIAN">BRIAN</option>
-                <option value="GARY">GARY</option>
-                <option value="KINGSLEY">KINGSLEY</option>
+                <option value="Alice">Alice</option>
+                <option value="Bob">Bob</option>
+                <option value="Charlie">Charlie</option>
+                <option value="David">David</option>
+                <option value="Eve">Eve</option>
+                <option value="Frank">Frank</option>
             </select><br>
 
             <label for="ratedName">Rated Player:</label>
             <select name="ratedName" required>
-                <option value="">Select your name</option>
-                <option value="SAI">SAI</option>
-                <option value="AARON">AARON</option>
-                <option value="DIEGO">DIEGO</option>
-                <option value="BRIAN">BRIAN</option>
-                <option value="GARY">GARY</option>
-                <option value="KINGSLEY">KINGSLEY</option>
+                <option value="">Select player to rate</option>
+                <option value="Alice">Alice</option>
+                <option value="Bob">Bob</option>
+                <option value="Charlie">Charlie</option>
+                <option value="David">David</option>
+                <option value="Eve">Eve</option>
+                <option value="Frank">Frank</option>
             </select><br>
 
             <label for="pace">Pace:</label>
@@ -112,8 +121,9 @@
             <label for="physical">Physical:</label>
             <input type="number" name="physical" min="0" max="100" required><br>
 
-            <label for="overall_rating">Overall rating:</label>
-            <input type="number" name="overall_rating" min="0" max="100" required><br>
+            <label for="overallRating">Overall Rating:</label>
+            <input type="number" name="overallRating" min="0" max="100" required>
+            <div class="description">Please rate above 80.</div>
 
             <button type="submit">Submit Rating</button>
         </form>
