--- a/index.html
+++ b/index.html
@@ -103,23 +103,25 @@
                 <label for="raterName">Your Name:</label>
                 <select name="raterName" required>
                     <option value="">Select your name</option>
-                    <option value="Alice">Alice</option>
-                    <option value="Bob">Bob</option>
-                    <option value="Charlie">Charlie</option>
-                    <option value="David">David</option>
-                    <option value="Eve">Eve</option>
-                    <option value="Frank">Frank</option>
+                <option value="SAI">SAI</option>
+                <option value="AARON">AARON</option>
+                <option value="DIEGO">DIEGO</option>
+                <option value="BRIAN">BRIAN</option>
+                <option value="GARY">GARY</option>
+                <option value="KINGSLEY">KINGSLEY</option>
+                <option value="OSAMA">OSAMA</option>
                 </select><br>
 
                 <label for="ratedName">Rated Player:</label>
                 <select name="ratedName" required>
                     <option value="">Select player to rate</option>
-                    <option value="Alice">Alice</option>
-                    <option value="Bob">Bob</option>
-                    <option value="Charlie">Charlie</option>
-                    <option value="David">David</option>
-                    <option value="Eve">Eve</option>
-                    <option value="Frank">Frank</option>
+                <option value="SAI">SAI</option>
+                <option value="AARON">AARON</option>
+                <option value="DIEGO">DIEGO</option>
+                <option value="BRIAN">BRIAN</option>
+                <option value="GARY">GARY</option>
+                <option value="KINGSLEY">KINGSLEY</option>
+                <option value="OSAMA">OSAMA</option>
                 </select><br>
 
                 <label for="pace">Pace:</label>
